Fix global links white space wrapping

--- a/themes/my-theme/source/css/components/_tags.scss
+++ b/themes/my-theme/source/css/components/_tags.scss
@@ -8,4 +8,5 @@
 .tag-list-link {
   padding: 1rem 1.5rem;
   font-weight: 700;
+  display: inline-block;
 }
